[package]
name = "kube-cdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.71.0", features = ["runtime"] }
k8s-openapi = { version = "0.14.0", features = ["v1_23"] }
anyhow = "1.0.57"
tokio = { version = "1.18.2", features = ["full"] }
futures = "0.3.21"
rdkafka = { version = "0.25", features = ["cmake-build"] }